# mad-hatter-examples

.github/workflows/: ci.yml
bad/: Cargo.toml  build.rs  target
bad/src/: main.rs
bad/story1/: Cargo.toml
bad/story1/src/: main.rs
bad/templates/: defaults.json
good/: Cargo.toml  build.rs  concept-map.json  schema.json  schema_users.json  target
good/src/: concept_map.rs  main.rs
good/story1/: Cargo.toml
good/story1/src/: main.rs
good/test_data/: story4_records.txt
