[package]
name = "good-examples"
version = "0.1.0"
edition = "2021"

[dependencies]
mad-hatter = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"

[build-dependencies]
mad-hatter-guardian = "0.1"

[[bin]]
name = "story1_ghost_status"
path = "src/bin/story1_ghost_status.rs"

[[bin]]
name = "story2_critical_paths"
path = "src/bin/story2_critical_paths.rs"

[[bin]]
name = "story3_config_logging"
path = "src/bin/story3_config_logging.rs"

[[bin]]
name = "story4_type_safety"
path = "src/bin/story4_type_safety.rs"
